// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshots 1`] = `
<GenericLink
  className={null}
  disabled={false}
  enforceA={false}
  keepScrollPosition={false}
  onClick={null}
  onMouseDown={null}
  openNewTab={false}
  replace={false}
  routerLinkType={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "propTypes": Object {
        "activeClassName": [Function],
        "activeStyle": [Function],
        "aria-current": [Function],
        "className": [Function],
        "exact": [Function],
        "innerRef": [Function],
        "isActive": [Function],
        "location": [Function],
        "onClick": [Function],
        "replace": [Function],
        "sensitive": [Function],
        "strict": [Function],
        "style": [Function],
        "target": [Function],
        "to": [Function],
      },
      "render": [Function],
    }
  }
  to=""
/>
`;

exports[`Matches snapshots 2`] = `
<GenericLink
  className="-dr-pogodin-react-utils_____tests__-shared-components-NavLink-styles___navLink___CYxNuq"
  disabled={false}
  enforceA={false}
  keepScrollPosition={false}
  onClick={null}
  onMouseDown={null}
  openNewTab={false}
  replace={false}
  routerLinkType={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "propTypes": Object {
        "activeClassName": [Function],
        "activeStyle": [Function],
        "aria-current": [Function],
        "className": [Function],
        "exact": [Function],
        "innerRef": [Function],
        "isActive": [Function],
        "location": [Function],
        "onClick": [Function],
        "replace": [Function],
        "sensitive": [Function],
        "strict": [Function],
        "style": [Function],
        "target": [Function],
        "to": [Function],
      },
      "render": [Function],
    }
  }
  to=""
/>
`;
